--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -5,7 +5,7 @@
   <div class="collapse navbar-collapse d-flex justify-content-end">
     <div class="navbar-nav">
       <a class="nav-item nav-link" ><%= link_to "Add a movie", new_list_bookmark_path(@list) %></a>
-      <a class="nav-item nav-link" ><%= link_to "Back to lists", lists_path %></a>
+      <a class="nav-item nav-link" ><%= link_to "Back to lists", root_path %></a>
     </div>
   </div>
 </nav>
@@ -14,7 +14,7 @@
 <div class="container">
 <div class="row">
 <% @list.bookmarks.each do |bookmark| %>
-  <%= link_to lists_path, class: "card-link" do %>
+  <%= link_to root_path, class: "card-link" do %>
   <div class="card col-4" >
     <%= image_tag bookmark.movie.poster_url, alt: bookmark.movie.title, width: "100%" %>
     <div class="card-body">
