--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -6,6 +6,9 @@
   <div class="form-inputs">
     <%= f.input :name %>
 
+    <%= f.input :photo, as: :file %>
+
+
   <div class="btn btn-primary">
     <%= f.button :submit %>
   </div>
